# AudioLDM-training-finetuning

./: .gitignore  README.md  bash_eval.sh  bash_train.sh  pyproject.toml
audioldm_train/: conditional_models.py  eval.py  infer.py
audioldm_train/config/2023_08_23_reproduce_audioldm/: audioldm_crossattn_flant5.yaml  audioldm_original.yaml  audioldm_original_medium.yaml
audioldm_train/config/2023_11_13_fast_dev_run/: audioldm_crossattn_flant5.yaml  audioldm_original.yaml
audioldm_train/config/2023_11_13_vae_autoencoder/: 16k_64.yaml
audioldm_train/losses/: __init__.py
audioldm_train/modules/audiomae/: AudioMAE.py
audioldm_train/modules/audiomae/sequence_gen/: model.py  sequence_input.py
audioldm_train/modules/audiomae_gen/: model.py
audioldm_train/modules/clap/open_clip/: model.py
audioldm_train/modules/clap/training/: data.py
audioldm_train/modules/diffusionmodules/: attention.py  model.py  openaimodel.py
audioldm_train/modules/hifigan/: models_hifires.py
audioldm_train/modules/latent_diffusion/: ddim.py  ddpm.py  plms.py
audioldm_train/modules/latent_encoder/: autoencoder.py
audioldm_train/train/: autoencoder.py  latent_diffusion.py
audioldm_train/utilities/: __init__.py  model_util.py  tools.py
audioldm_train/utilities/audio/: stft.py  tools.py
audioldm_train/utilities/data/: dataset.py
audioldm_train/utilities/train/: lr_scheduler.py
tests/: validate_dataset_checkpoint.py
tests/captionlist/: inference_test.lst  inference_test_with_filename.lst
